Read-Only & TODO plugin doesn't work in 46.0
Originally reported at https://github.com/flathub/org.gnome.Gnote/issues/59.
After enabling e.g. the Read Only and TODO plugins they don't appear to offer their described functionality. I haven't tried all disabled plugins but it looks like a systemic problem.
I experimented with Fedora's gnote
package, it seems to be similarly broken. The TODO plugin does nothing at all as far as I can tell. If I enable the Read Only plugin, it prints a load of warnings to the console; only if I restart Gnote does it function correctly.