Fix readonly plugin enable with note already open

Fixes https://gitlab.gnome.org/GNOME/gnote/-/issues/179